website/static/css/custom.css
/* your custom css */

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}

@media only screen and (min-width: 1024px) {
}

@media only screen and (max-width: 1023px) {
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
}

blockquote {
  background-color: rgba(226, 232, 125, 0.1);
  border-left: 5px solid rgba(226, 232, 125, 0.3);
}

.run-code-button {
  margin-top: -25px;
  margin-bottom: 5px;
  display: inline-block;
}

pre code {
  background-color: #fff;
  border-left: 4px solid #6b52ae;
}

.quote-source {
  display: block;
  text-align: right;
  margin-top: -25px;
  margin-bottom: 10px;
  opacity: 0.8;
  font-size: 14px;
}

